Fixes #4182: Need to make expand/collapse clickable area for tree larger in high contrast mode.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10832 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1040,8 +1040,11 @@ body .dijitAlignClient { position: absolute; }
 .dijit_a11y .dijitExpandoText { 
 	float: left; 
 	display: inline; 
-	padding-right: 3px; 
-	font: 0.75em Arial; 
+	padding-left: 10px;
+	padding-right: 10px; 
+	font-family: monospace;
+	border-style: solid;
+	border-width: thin;
 } 
 
 /* Dialog */
